API handler was added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,6 @@
-<mat-tab-group (selectedTabChange)="updateDatasources($event)">
-  <mat-tab label="Making an order">
-    <div class="basic-container">
-      <app-new-order></app-new-order> 
-    </div>
-  </mat-tab>
-  <mat-tab label="Order">
-    <div class="basic-container">
-      <app-submit-order></app-submit-order> 
-    </div>
-  </mat-tab>
-  <mat-tab label="Orders approve for shipment"> 
-    <div class="basic-container">
-      <app-approve-order></app-approve-order> 
-    </div>
-  </mat-tab>
-</mat-tab-group>
+<h1>Order creator demo</h1>
+<nav> 
+  <a routerLink = "/order">Order creating</a> 
+  <a routerLink = "/auth">Auth</a> 
+</nav>
+<router-outlet></router-outlet>
