--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,3 +12,15 @@ body {
   float: right;
   margin: 8px;
 }
+
+a:link, a:visited { 
+  background-color: #848686; 
+  color: white; 
+  padding: 10px 25px; 
+  text-align: center; 
+  text-decoration: none; 
+  display: inline-block; 
+} 
+a:hover, a:active {
+  background-color: #BD9696;
+}
